I have fixed the left side below the header (About Me, Works, Contact) to be in alignment with right side using flex-basis. Next will need to space out the project boxes and attribute all the links, add icons,psuedo tags,  and readme.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,15 +122,17 @@ article {
  background-color: rgba(182, 182, 182);
 /* border: 5px dotted rgb(45, 87, 6); */
 }
-article > h2{
+.about-me{
   display: flex;
-  /* flex-wrap: wrap; */
   justify-content: flex-end;
+  flex-basis: 30%;
+  width: 100%;  
   font-size: 44px;
-   font-weight: 500;
-   color: rgba( 2, 39, 53,1);
-   border-right: 6px solid rgba( 2, 39, 53,1);
-}
+  font-weight: 500;
+  color: rgba( 2, 39, 53,1);
+  border-right: 6px solid rgba( 2, 39, 53,1);
+  /* border: 3px solid yellow; */
+} 
 
 .about-me-paragraphs{
   display: flex;
@@ -158,49 +160,57 @@ article > h2{
   border: 8px dotted purple;
 }
 
-.project-grid-container div > h2{
+.works{
   display: flex;
   justify-content: flex-end;
+  flex-basis: 30%;
   width: 100%;  
   font-size: 44px;
   font-weight: 500;
   color: rgba( 2, 39, 53,1);
   border-right: 6px solid rgba( 2, 39, 53,1);
+  /* border: 3px solid yellow; */
 } 
 .all-box-items{
   display: flex;
-  
   flex-wrap: wrap;
+  height: 900px;
+  flex-basis: 100%;
+  border: 3px solid beige;
+  align-items: center;
 }
 .top-box-column {
   display: flex;
   /* flex-direction: column; */
-  height: auto;
+  height: 300px;
   width: 100%;
+  margin: 3%;
   border: 4px solid chocolate;
 }
 
  .lower-box-wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-
-  /* flex-direction: column; */
-  height: auto;
+  margin: 3%;
+/* flex-direction: column; */
+  height: 225px;
   width: 100%;
 }
 
 #square-box-2, #square-box-3 {
-  height: 50px;
-  width: 50%;  
-    border: 3px solid black;
+  display: flex;
+   height: 50%;
+   width: 50%;  
+   border: 3px solid black;
 }
 
 
 
 #square-box-4, #square-box-5{
-width: 50%;
-border: 3px solid black;
+  display: flex;
+  height: 50%;
+  width: 50%;
+ border: 3px solid black;
 }
 
 
@@ -208,25 +218,38 @@ border: 3px solid black;
 /* ---This is the footer bar within the section-- */
 footer{
   display: flex;
-  flex-direction: row;
+  flex-basis: 100%;
   align-items: center;
-  justify-content: space-evenly;
   width: 100%;
   height: auto;
   background-color: rgb(182, 182, 182);
   color: rgba( 2, 39, 53,1);
-  font-size: 25px;
+  font-size: 18px;
   border: 5px dotted white;
 }
 
- footer > h2{
+ .contact{
   display: flex;
-  justify-content: flex-end;  
+  justify-content: flex-end;
+  flex-basis: 30%;
+  width: 100%;  
   font-size: 44px;
   font-weight: 500;
   color: rgba( 2, 39, 53,1);
   border-right: 6px solid rgba( 2, 39, 53,1);
+  /* border: 3px solid yellow; */
 } 
+.contact-items-wrapper{
+  display: flex;
+  flex-basis: 100%;
+  height: auto;
+  width: 100%;
+  justify-content: space-evenly;
+  background-color: rgb(182, 182, 182);
+  color: rgba( 2, 39, 53,1);
+  font-size: 18px;
+  font-weight: 900px;
+}
  
  /* need to add icons */
 
